@@ -29,6 +29,7 @@ Produced by Jim Shore and Levi Khatskevitch.
 * Added Cookies property to Browser.  Credit to Levi Khatskevitch.
 * Better handling of infinite redirection loops.  Credit to Levi Khatskevitch.
 * Fixed exception when clicking buttons inside UserControl.  Credit to Levi Khatskevitch.
+* CheckBoxTester.Checked can now be set to false.  Credit to Simon Jackson.
 
 (Note: Jim Shore was named Jim Little before the release of version 1.4.)
 
